# wav2mp3

./: CMakeLists.txt  README.md  thread_pool.cpp  thread_pool.hpp  wav2mp3.cpp  wav2mp3_convertor.cpp  wav2mp3_convertor.hpp
lib/x86/win/: libmp3lame-static.lib
lib/x86_64/win/: libmp3lame-static.lib
utils/: CMakeLists.txt
utils/file_utils/: CMakeLists.txt  dir_content.hpp
utils/file_utils/linux/: CMakeLists.txt  dir_content.cpp
utils/file_utils/win/: dir_content.cpp
vs/: wav2mp3.sln
vs/wav2mp3/: wav2mp3.vcxproj  wav2mp3.vcxproj.filters
